[project]
name = "project-agn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno[sqlite]>=2.6.19",
    "fastapi>=0.138.1",
    "groq>=1.5.0",
    "mcp>=1.28.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]
